--- a/appspec.yhj-web-Deploy-Group.yml
+++ b/appspec.yhj-web-Deploy-Group.yml
@@ -5,15 +5,15 @@ files:
     destination: /var/www/html
 hooks:
   BeforeInstall:
-    - location: /opt/codedeploy-agent/deployment-root/scripts/install_dependencies.sh
+    - location: scripts/install_dependencies.sh
       timeout: 300
       runas: root
   AfterInstall:
-    - location: /opt/codedeploy-agent/deployment-root/scripts/configure_permissions.sh
+    - location: scripts/configure_permissions.sh
       timeout: 300
       runas: root
   ApplicationStart:
-    - location: /opt/codedeploy-agent/deployment-root/scripts/start_server.sh
+    - location: scripts/start_server.sh
       timeout: 300
       runas: root
 
